# nedh

./: DistConc.md  README.md  cabal.project  haskit.json
Tour/: advertiser.edh  console-client.edh  console-server.edh  consumer-cli.edh  factotum.edh  factotum.py  hacking-service.edh  service-simple.edh  service-sophisticated.edh  service.edh  sniffer.edh  web-repl.edh  web-server.edh
edh_modules/net/: RT.edh  __init__.edh  __main__.edh  decor.edh  effects.edh  factotum.edh  ncc.edh  ncs.edh  options.edh  repl.edh  symbols.edh
edh_modules/net/demo/: __main__.edh  cli.edh  hack.edh  service.edh
edh_modules/net/demo/cli/: __main__.edh
edh_modules/net/demo/console/: __main__.edh
edh_modules/net/demo/hack/: __main__.edh
edh_modules/net/demo/service/: __main__.edh
edh_modules/net/demo/sniffer/: __main__.edh
edh_modules/net/demo/web/: front.html
edh_modules/net/demo/web/ws/: __main__.edh
edh_modules/net/factotum/: __main__.edh
edh_modules/net/html/: symbols.edh  taglib.edh
edh_modules/net/http/: __init__.edh  symbols.edh  taglib.edh
edh_modules/net/ncc/: __main__.edh
edh_modules/net/repl/: front.html
edh_modules/net/repl/ws/: __main__.edh
edh_modules/net/tour/: __init__.edh
edh_modules/net/util/: hack.edh
edh_modules/net/web/: nedh
edh_modules/net/web/repl/: front.html
edh_modules/net/web/repl/ws/: __main__.edh
host.hs/: nedh.cabal
host.hs/pub/Language/Edh/: Net.hs
host.hs/repl/: Main.hs  Repl.hs
host.hs/runfile/: Main.hs
host.hs/runmodu/: Main.hs  Repl.hs
host.hs/src/Language/Edh/: Net.hs
host.hs/src/Language/Edh/Net/: Addr.hs  Advertiser.hs  Client.hs  Factotum.hs  Http.hs  Mcast.hs  MicroProto.hs  Peer.hs  Server.hs  Sniffer.hs  WebSocket.hs
host.js/nedh/: index.js  index.mjs  lander.js  lander.mjs  mc.js  mc.mjs  package.json  ws-client.js  ws-client.mjs
host.py/nedh/: __init__.py  client.py  effects.py  facto.py  fdsock.py  mproto.py  peer.py  server.py  symbols.py
host.py/nedh/factotum/: __main__.py
nedh/: nedh.cabal
nedh/exec/: Main.hs
nedh/pub/Language/Edh/: Net.hs
nedh/repl/: Main.hs  Repl.hs
nedh/runmodu/: Main.hs
nedh/src/Language/Edh/Net/: Addr.hs  Advertiser.hs  Client.hs  Discover.hs  Http.hs  MicroProto.hs  Peer.hs  Server.hs  Sniffer.hs  WebSocket.hs
