cabal-version:      2.4
name:               nedh
version:            0.1.0.0
license:            BSD-3-Clause
copyright:          Compl Yue
maintainer:         compl.yue@icloud.com
author:             Compl Yue
stability:          experimental
homepage:           https://github.com/e-wrks/nedh
bug-reports:        https://github.com/e-wrks/nedh/issues
synopsis:           Networked Edh
description:
  Please see the README on Github at <https://github.com/e-wrks/nedh>

category:           Distributed,Network,Language
build-type:         Simple
extra-source-files: README.md

source-repository head
  type:     git
  location: https://github.com/e-wrks/nedh
  subdir:   host.hs

library
  exposed-modules:    Language.Edh.Net
  hs-source-dirs:     pub
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    BangPatterns
    ConstraintKinds
    DataKinds
    FlexibleContexts
    FlexibleInstances
    GADTs
    KindSignatures
    LambdaCase
    OverloadedStrings
    ScopedTypeVariables
    TupleSections
    TypeApplications
    TypeOperators
    ViewPatterns

  ghc-options:        -Wall
  build-depends:
    , base                  >=4.12
    , binary
    , bytestring
    , clock
    , containers
    , edh
    , hashable
    , lossless-decimal
    , mtl
    , nedh-internal
    , network               >=3.1.1
    , scientific
    , stm                   >=2.5
    , text
    , time
    , transformers
    , unix
    , unordered-containers

executable nedh
  main-is:            Main.hs
  hs-source-dirs:     runmodu
  other-modules:      Repl
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    BangPatterns
    ConstraintKinds
    DataKinds
    FlexibleContexts
    FlexibleInstances
    GADTs
    KindSignatures
    LambdaCase
    OverloadedStrings
    ScopedTypeVariables
    TupleSections
    TypeApplications
    TypeOperators
    ViewPatterns

  ghc-options:        -Wall -threaded -rtsopts "-with-rtsopts=-maxN31 -qg"
  build-depends:
    , base              >=4.12
    , bytestring
    , edh
    , lossless-decimal
    , mtl
    , nedh
    , stm               >=2.5
    , text
    , transformers

executable runnedh
  main-is:            Main.hs
  hs-source-dirs:     runfile
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    BangPatterns
    ConstraintKinds
    DataKinds
    FlexibleContexts
    FlexibleInstances
    GADTs
    KindSignatures
    LambdaCase
    OverloadedStrings
    ScopedTypeVariables
    TupleSections
    TypeApplications
    TypeOperators
    ViewPatterns

  ghc-options:        -Wall -threaded -rtsopts "-with-rtsopts=-maxN31 -qg"
  build-depends:
    , base              >=4.12
    , bytestring
    , edh
    , lossless-decimal
    , mtl
    , nedh
    , stm               >=2.5
    , text
    , transformers

library nedh-internal
  exposed-modules:
    Language.Edh.Net.Addr
    Language.Edh.Net.Advertiser
    Language.Edh.Net.Client
    Language.Edh.Net.Http
    Language.Edh.Net.MicroProto
    Language.Edh.Net.Peer
    Language.Edh.Net.Server
    Language.Edh.Net.Sniffer
    Language.Edh.Net.WebSocket

  hs-source-dirs:     src
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    BangPatterns
    ConstraintKinds
    DataKinds
    FlexibleContexts
    FlexibleInstances
    GADTs
    KindSignatures
    LambdaCase
    OverloadedStrings
    ScopedTypeVariables
    TupleSections
    TypeApplications
    TypeOperators
    ViewPatterns

  ghc-options:        -Wall
  build-depends:
    , base                  >=4.12
    , bytestring
    , clock
    , containers
    , directory
    , edh
    , filepath
    , hashable
    , lossless-decimal
    , mtl
    , network               >=3.1.1
    , snap-core
    , snap-server
    , stm                   >=2.5
    , text
    , time
    , transformers
    , unix
    , unordered-containers
    , websockets
